<resources>
    <string name="app_name">job_finder_ist</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="school_logo_desc">School Logo</string>
    <string name="show_password">Show Password</string>
    <string name="welcome_message">Get connected to jobs easily and start applying today. Explore opportunities now!</string>
    <string name="confirm_password">confirm password</string>
    <string name="signup">signup</string>
    <string name="login_here">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="you_have_no_an_account">You do not have an account?</string>
    <string name="create_account">create account to continue</string>
    <string name="todo">TODO</string>
    <string name="tododo">TODO</string>
    <string name="signup_here">Sign up</string>
    <string name="job_notifications">Job Notifications</string>
    <string name="recommended_jobs">Recommended Jobs</string>
    <string name="to">TODO</string>
    <string name="job_title">Job Title</string>
    <string name="apply">Apply</string>
    <string name="job_description">"Job description goes "</string>
    <string name="to_job">TODO</string>
    <string name="click_to_apply">Apply</string>
    <string name="menu">Menu</string>
    <string name="welcome">Welcome, [Name]!</string>
    <string name="all_jobs">All Jobs</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="company_name">Company Name</string>
    <string name="location">Location</string>
    <string name="job_itle">Job Title</string>
    <string name="jobtitle">Job Title</string>
    <string name="job_description_here">Job description here</string>
    <string name="open" />
    <string name="clicktoapply">apply</string>
    <string name="close">close</string>
    <string name="job">TODO</string>
    <string name="welcomehere">Welcome!</string>
    <string name="home">Home</string>
    <string name="jobs">Jobs</string>
    <string name="profilepl">Profile</string>
    <string name="dotted_menu" />
    <string name="welcome_message_home">Welcome!</string>
    <string name="find_your_job">Discover creative jobs</string>
    <string name="logo_ist" />
    <string name="profile_holder" />
    <string name="full_time">Full-time</string>
    <string name="company">Oracle Software</string>
    <string name="software_engineer">Technical Operator</string>
    <string name="posted_2_days_ago">Posted 2 days ago</string>
    <string name="new_york_ny">Nairobi, Kenya</string>
    <string name="nairobi" />
    <string name="remote">Remote</string>
    <string name="error_placeholder">error uploading image</string>
    <string name="settings_sidebar">Settings</string>
    <string name="change_picture">Change or upload picture</string>
    <string name="new_job_notifications">New Job Notifications</string>
    <string name="logout_here">Logout</string>
    <string name="profile_holder_for_image">TODO</string>
    <string name="jobfinder_ist">JobFinder-IST</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="message">Message</string>
    <string name="apply_for_job">Apply for Job</string>
    <string name="apply_to_job">apply</string>
    <string name="upload_cv">Upload CV</string>
    <string name="no_cv_selected">No CV selected</string>
</resources>