<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#333232"
    android:padding="16dp">

    <Button
        android:id="@+id/change_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_picture"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/new_job_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_job_notifications"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_here"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white" />
</LinearLayout>
