<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginTop="130dp"
    android:layout_marginBottom="50dp"
    android:orientation="vertical"
    android:padding="20dp"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/logo_ist"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logo_ist"
        android:src="@drawable/logo_remove"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@drawable/edit_text_background"
        android:hint="@string/your_name"
        android:importantForAccessibility="yes"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#3A3A3A"
        android:textColorHint="#757575"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/your_email"
        android:importantForAccessibility="yes"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#3A3A3A"
        android:textColorHint="#757575"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:gravity="top"
        android:hint="@string/message"
        android:importantForAccessibility="yes"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:padding="12dp"
        android:textColor="#3A3A3A"
        android:textColorHint="#757575"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/apply_for_job_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#D05858"
        android:gravity="center|center_horizontal"
        android:minHeight="48dp"
        android:text="@string/apply_for_job"
        android:textColor="#FBFAFA"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

</LinearLayout>
