<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityJobFinder">

    <!-- Main content layout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E7EAE9"
            android:padding="16dp">
            <!-- Logo -->
            <ImageView
                android:id="@+id/logo_ist"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="8dp"
                android:layout_marginTop="-10dp"
                android:contentDescription="@string/logo_ist"
                android:src="@drawable/logo_remove" />

            <RelativeLayout
                android:id="@+id/profile_section"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <!-- Profile Picture Placeholder -->
                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/profile_holder_for_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_holder"
                    app:shapeAppearanceOverlay="@style/RoundedImageView" />


                <!-- Red Notification Dot -->
                <View
                    android:id="@+id/notification_dot"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_alignTop="@id/profile_picture"
                    android:layout_alignEnd="@id/profile_picture"
                    android:background="@drawable/red_dot"
                    android:elevation="4dp" />
            </RelativeLayout>

            <!-- "Find Your Job" header -->
            <TextView
                android:id="@+id/find_your_job"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:text="@string/find_your_job"
                android:textColor="#100F0F"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <!-- Job card after "F"
                    android:visibility="invisible" />ind Your Job" header -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/find_your_job"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp"
                android:clipToPadding="false" />
        </RelativeLayout>

        <!-- Bottom navigation bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="bottom"
            android:background="#FA3535"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="-10dp"
                android:layout_marginEnd="2dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:src="@drawable/jobimg1"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/all_jobs"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/tododo"
                android:src="@drawable/jobimg2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:gravity="center"
                android:text="@string/applied_jobs"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </FrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>